--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -780,6 +780,7 @@ public:
 > 给定一个表示分数的非负整数数组。 玩家 1 从数组任意一端拿取一个分数，随后玩家 2 继续从剩余数组任意一端拿取分数，然后玩家 1 拿，…… 。
 > 每次一个玩家只能拿取一个分数，分数被拿取之后不再可取。直到没有剩余分数可取时游戏结束。最终获得分数总和最多的玩家获胜。 如果最终两个玩家的分数相等，那么玩家 1 仍为赢家
 给定一个表示分数的数组，预测玩家1是否会成为赢家。你可以假设每个玩家的玩法都会使他的分数最大化。
+如果最终两个玩家的分数相等，那么玩家 1 仍为赢家
 
 - 两个人交换地从两端取数，进行结果对比，可以进行递归模拟
   - 由于存在重复子问题，因此可以使用动态规划降低时间复杂度。
@@ -1264,6 +1265,7 @@ public:
         if((sum + target) % 2 != 0 || sum < target) return 0;
         int n = nums.size();
         target = (sum + target) / 2;
+        if (target < 0) return 0; // 新增判断 处理当target为负数的非法情况
         vector<int>dp(target + 1, 0);
         dp[0] = 1;
         
@@ -1633,7 +1635,7 @@ public:
 
 - 比前面一题要复杂一些：
 - 定义`dp[k][i]`表示k种硬币兑换i的组合数
-- 那么状态转移公式为 `dp[k][i] = dp[k - 1][i] + d[k][i - k]`
+- 那么状态转移公式为 `dp[k][i] = dp[k - 1][i] + d[k][i - coins[k-1]]`
   - 前k个硬币凑齐金额i的组合数等于**前k-1个硬币凑齐金额i的组合数加上在原来i-k的基础上使用硬币的组合数**。
   - 即要分为两种情况：
     - 一种是**只用前k-1个硬币就凑齐了**，
@@ -1692,6 +1694,22 @@ public:
 };
 ```
 
+```c++
+class Solution {
+public:
+    int change(int amount, vector<int>& coins) {
+        int n = coins.size();
+        vector<int> dp(amount + 1);
+        dp[0] = 1;
+        for (int i = 0; i < n; i++) {
+            for (int j= coins[i]; j <= amount; j++) {
+                dp[j] += dp[j - coins[i]];
+            }
+        }
+        return dp[amount];
+    }
+};
+```
 
 
 ### 300. 最长上升子序列 (LIS)
@@ -1770,8 +1788,8 @@ public:
 class Solution {
 public:
     int findNumberOfLIS(vector<int>& nums) {
-        int n = nums.size();
-        vector<int> dp(n, 1);
+        int n = nums.size(); 
+        vector<int> dp(n, 1);// 关键点： 填充为1，以保证整个序列里各个长度都能正常  
         vector<int> cnt(n, 1);
         int ans = 1;
         for (int i = 0; i < n; i ++) {
@@ -2467,6 +2485,27 @@ public:
         int T = 1;
         while (calcF(K, T) < N + 1) T++;
         return T;
+    }
+};
+```
+- 标准的动态规划写法
+  - 与上面的原理一致，
+  - `dp[i][m]=dp[i-1][m-1] + dp[i][m-1] + 1`
+```c++
+class Solution {
+public:
+    
+    int superEggDrop(int k, int n) {
+        vector<vector<int>> dp(k + 1,vector<int>(n + 1));
+        int m = 0;
+        // dp[k][m] : k个蛋 m次机会的覆盖范围
+        while (dp[k][m] < n) {
+            m++;
+            for (int i = 1; i <= k; i++) {
+                dp[i][m] = dp[i-1][m-1] + dp[i][m-1] + 1;
+            }
+        }
+        return m;
     }
 };
 ```
