--- a/topics/T2-字符串匹配问题.md
+++ b/topics/T2-字符串匹配问题.md
@@ -250,6 +250,7 @@ public:
 
 - 手动KMP算法实现：
   - **KMP查找算法**，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 
+  - **注意搜索范围： 是[1,2n-1]**
   - 时间复杂度(O(N))
   - 代码结构： 
     - 构造next数组函数
@@ -279,6 +280,7 @@ public:
         int m = pattern.size();
         vector<int> next = getNext(pattern);
         int k = -1;
+        // 搜索空间 [1, 2n-1]
         for (int i = beg; i < n - 1; i++) {
             while (k != -1 && pattern[k + 1] != query[i]) {
                 k = next[k];
@@ -512,7 +514,8 @@ public:
         int  n = s.size();
         int  m = p.size();
         vector<vector<int>> dp(n + 1, vector<int> (m + 1));
-        // init 初始化设置
+        // init 初始化设置 关键点
+        // 缺失部分设置将验证影响结果
         dp[0][0] = 1;
         for (int i = 1; i <= m; i++) {
             if (p[i-1] == '*') {
