--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -59,6 +59,7 @@
   - [767. 重构字符串](#767-重构字符串)
   - [340. 至多包含K个不同字符的最长子串](#340-至多包含k个不同字符的最长子串)
   - [1044. 最长重复子串*](#1044-最长重复子串)
+  - [笔试题： 最长相同子串](#笔试题-最长相同子串)
   - [187. 重复的DNA序列](#187-重复的dna序列)
   - [241. 为运算表达式设计优先级](#241-为运算表达式设计优先级)
 
@@ -3130,6 +3131,42 @@ public:
         return ans;
     }
 };
+```
+
+### 笔试题： 最长相同子串
+- 给定字符串， 计算字符串内最长的相同子串， 相同子串之间没有重叠/交叉， 即不考虑子串本身
+```
+123ABCDEABCF: 3 ABC
+```
+- 动态规划：
+  - 看作两个字符串， 计算最长相同子串（不考虑相同位置、子串本身）
+- `dp[i][j]` 
+  - `dp[i][j]=dp[i-1][j-1] + 1` 当且仅当两串对应位置相等，且`i!=j`
+  - 时间复杂度 O(N^2)
+```c++
+#include<iostream>
+#include<vector>
+using namespace std;
+
+const int MAXN = 1000 + 5;
+
+char s[MAXN];
+
+int dp[MAXN][MAXN];
+
+int main() {
+ string s;
+ cin >> s;
+ int n = s.size();
+ int ans = 0;
+ for(int i = 1; i <= n; ++i)
+  for(int j = i; j <= n; ++j)
+   if(i != j && s[i] == s[j])
+    dp[i][j] = dp[i-1][j-1] + 1,
+    ans = ans < dp[i][j] ? dp[i][j] : ans;
+ cout << ans << endl;
+ return 0;
+}
 ```
 
 ### 187. 重复的DNA序列
